# openenv2.0

./: .gitignore  Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: app.py  environment.py  requirements.txt
